productity app added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
         <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/todolist.png" alt="todolist screenshot">
           </a>
       </div>
+
+      <div id="simlpestd" class="project-tile">
+        <a href="https://github.com/J-Guidry/simplegtd" target="_blank">
+        <h5 class="project-title">Simple Productiviy App</h5>
+        <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/productivity.png" alt="todolist screenshot">
+          </a>
+      </div>
     </section>
     
     <header id="contact-header"><p>You can find me here:</p></header>
