--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
         <img src="https://github.com/J-Guidry/quickpoll/raw/master/quickpoll_main.png" alt="todolist screenshot">
           </a>
       </div>
+
+      <div id="simlpestd" class="project-tile">
+        <a href="https://github.com/J-Guidry/quickpoll" target="_blank">
+        <h5 class="project-title">Wikipedia Viewer</h5>
+        <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/viewer.png" alt="todolist screenshot">
+          </a>
+      </div>
     </section>
     
     <header id="contact-header"><p>You can find me here:</p></header>
