Recipe Box added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="projects">
       <div id="survey" class="project-tile">
         <a href="https://codepen.io/Adinseed/full/bjbKgy/" target="_blank">
-        <h5 class="project-title">Survey</h5>
+        <h5 class="project-title">Mock Survey Page</h5>
         <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/survey.png" alt="survey page screenshot">
           </a>
       </div>
@@ -59,26 +59,34 @@
           </a>
       </div>
 
-      <div id="simlpestd" class="project-tile">
+      <div class="project-tile">
         <a href="https://github.com/J-Guidry/simplegtd" target="_blank">
-        <h5 class="project-title">Simple Productiviy App</h5>
-        <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/productivity.png" alt="todolist screenshot">
+         <h5 class="project-title">Simple Productiviy App</h5>
+          <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/productivity.png" alt="productibity app screenshot">
           </a>
       </div>
 
-      <div id="simlpestd" class="project-tile">
+      <div class="project-tile">
         <a href="https://github.com/J-Guidry/quickpoll" target="_blank">
-        <h5 class="project-title">Quickpoll</h5>
-        <img src="https://github.com/J-Guidry/quickpoll/raw/master/quickpoll_main.png" alt="todolist screenshot">
+          <h5 class="project-title">Quickpoll</h5>
+          <img src="https://github.com/J-Guidry/quickpoll/raw/master/quickpoll_main.png" alt="quickpoll screenshot">
           </a>
       </div>
 
-      <div id="simlpestd" class="project-tile">
-        <a href="https://github.com/J-Guidry/quickpoll" target="_blank">
-        <h5 class="project-title">Wikipedia Viewer</h5>
-        <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/viewer.png" alt="todolist screenshot">
+      <div class="project-tile">
+        <a href="https://codepen.io/Adinseed/full/YrpLdM/" target="_blank">
+          <h5 class="project-title">Wikipedia Viewer</h5>
+          <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/viewer.png" alt="Wikipedia Viewer screenshot">
           </a>
       </div>
+
+      <div class="project-tile">
+        <a href="https://github.com/J-Guidry/simple-recipe-box/" target="_blank">
+         <h5 class="project-title">Recipe Box</h5>
+          <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/recipe-box.png" alt="recipe box screenshot">
+          </a>
+      </div>
+      
     </section>
     
     <header id="contact-header"><p>You can find me here:</p></header>
