simon game added

--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
           </a>
       </div>
       
+      <div class="project-tile">
+        <a href="https://github.com/J-Guidry/simon-game/" target="_blank">
+         <h5 class="project-title">Simon Game</h5>
+          <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/simon.png" alt="simon game screenshot">
+          </a>
+      </div>
     </section>
     
     <header id="contact-header"><p>You can find me here:</p></header>
