--- a/index.html
+++ b/index.html
@@ -23,22 +23,21 @@
 
     <section id="welcome-section">
       <h1>Hello</h1>
-      <p>I am Jhabari Guidry, a self-taught Houston Front-End Web Developer</p>
-      <p>I like to build simple web apps</p>
+      <p>I am Jhabari Guidry, a self-taught Front-End Web Developer</p>
+      <p>I like to build web apps</p>
     </section>
     
     
     <header class="projects-header">
       <h1>Here Are My Projects</h1>
-      <h2>Small Web Apps</h2>
-      <p>These are small one page web apps</p>
+      <h2>Web Apps</h2>
     </header>
 
     <section class="projects">
       <div id="calculator" class="project-tile">
         <h5 class="project-title">Calculator</h5>
         <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/calculator.png" alt="calculator screenshot">
-        <div class="info">
+        <div class="project-info">
           <p>Uses: HTML, CSS, JS</p>
           <p><a href="https://github.com/J-Guidry/calculator/" target="_blank">Github</a></p>
           <p><a href="https://codepen.io/Adinseed/full/Wzgddv/" target="_blank">Live</a></p>
@@ -49,7 +48,7 @@
       <div id="todolist" class="project-tile">
         <h5 class="project-title">Todolist</h5>
         <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/todolist.png" alt="todolist screenshot">
-        <div class="info">
+        <div class="project-info">
           <p>Uses: HTML, CSS, JS</p>
           <p><a href="https://github.com/J-Guidry/todolist" target="_blank"></a></p>
           <p><a href="https://codepen.io/Adinseed/full/MBYzxE/" target="_blank">Live</a></p>
@@ -60,7 +59,7 @@
       <div class="project-tile">
          <h5 class="project-title">Simple Productiviy App</h5>
          <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/productivity.png" alt="productibity app screenshot">
-         <div class="info">
+         <div class="project-info">
            <p>Uses: HTML, CSS, JS, Jquery, Bootstrap</p>
            <p><a href="https://github.com/J-Guidry/simplegtd" target="_blank">Github</a></p>
         </div>
@@ -70,7 +69,7 @@
       <div class="project-tile">
           <h5 class="project-title">Quickpoll</h5>
           <img src="https://github.com/J-Guidry/quickpoll/raw/master/quickpoll_main.png" alt="quickpoll screenshot">
-          <div class="info">
+          <div class="project-info">
             <p>Uses: HTML, CSS, JS, PHP Laravel, PostgreSQL</p>
             <p><a href="https://github.com/J-Guidry/quickpoll" target="_blank">Github</a></p>
             <p><a href="https://quickpoll-39797.herokuapp.com/">Live</a></p>
@@ -81,7 +80,7 @@
       <div class="project-tile">
         <h5 class="project-title">Recipe Box</h5>
         <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/recipe-box.png" alt="recipe box screenshot">
-        <div class="info">
+        <div class="project-info">
           <p>Uses: HTML, CSS, ReactJS</p>
           <p><a href="https://github.com/J-Guidry/simple-recipe-box/" target="_blank">Github</a></p>
           <p><a href="https://simple-recipe-box.netlify.com/">Live</a></p>
@@ -92,7 +91,7 @@
       <div class="project-tile">
         <h5 class="project-title">Simon Game</h5>
         <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/simon.png" alt="simon game screenshot">
-        <div class="info">
+        <div class="project-info">
           <p>Uses: HTML, CSS, Reactjs</p>
           <p><a href="https://github.com/J-Guidry/simon-game/" target="_blank">Github</a></p>
           <p><a href="https://simon-game-6fd.netlify.com/" target="_blank">Live</a></p>
@@ -104,7 +103,7 @@
           <h5 class="project-title">Wikipedia Viewer</h5>
           <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/viewer.png" alt="Wikipedia Viewer screenshot">
         </a>
-        <div class="info">
+        <div class="project-info">
           <p>Uses: HTML, CSS, JS</p>
           <p><a href="https://codepen.io/Adinseed/full/YrpLdM/" target="_blank">Live</a></p>
         </div>
