--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
           <li><a href="#welcome-section">About</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact-me">Contact</a></li>
         </ul>
       </nav>
   </header>
@@ -23,24 +23,25 @@
 
     <section id="welcome-section">
       <h1>Hello</h1>
-      <p>I am Jhabari Guidry, a self-taught Front-End Web Developer</p>
-      <p>I like to build web apps and transition designs to code</p>
+      <p>I am Jhabari Guidry, a Web Developer</p>
+      <p>I like to build web apps</p>
     </section>
-    
     
     <header class="projects-header">
       <h1>Here Are My Projects</h1>
       <h2>Web Apps</h2>
     </header>
 
-    <section class="projects">
+    <section class="projects" id="projects">
       <div id="calculator" class="project-tile">
         <h5 class="project-title">Calculator</h5>
         <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/calculator.png" alt="calculator screenshot">
         <div class="project-info">
+          <p>A four function calculator</p>
           <p>Uses: HTML, CSS, JS</p>
           <p><a href="https://github.com/J-Guidry/calculator/" target="_blank">Github</a></p>
-          <p><a href="https://codepen.io/Adinseed/full/Wzgddv/" target="_blank">Live</a></p>
+          <p><a href="./live/calculator/index.html" target="_blank">Live</a></p>
+          <p><a href="./writeups/calculator.html" target="_blank">Writeup</a></p>
         </div>
       </div>
 
@@ -49,9 +50,11 @@
         <h5 class="project-title">Todolist</h5>
         <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/todolist.png" alt="todolist screenshot">
         <div class="project-info">
+          <p>A simple todo list</p>
           <p>Uses: HTML, CSS, JS</p>
           <p><a href="https://github.com/J-Guidry/todolist" target="_blank">Github</a></p>
-          <p><a href="https://codepen.io/Adinseed/full/MBYzxE/" target="_blank">Live</a></p>
+          <p><a href="./live/todolist/todo.html" target="_blank">Live</a></p>
+          <p><a href="./writeups/todolist.html" target="_blank">Writeup</a></p>
         </div>
       </div>
 
@@ -60,9 +63,11 @@
          <h5 class="project-title">Simple Productiviy App</h5>
          <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/productivity.png" alt="productibity app screenshot">
          <div class="project-info">
+           <p>A productivity app to organize your tasks</p>
            <p>Uses: HTML, CSS, JS, Jquery, Bootstrap</p>
            <p><a href="https://github.com/J-Guidry/simplegtd" target="_blank">Github</a></p>
            <p><a href="https://simplegtd.netlify.com/" target="_blank">Live</a></p>
+           <p><a href="./writeups/gtd.html" target="_blank">Writeup</a></p>
         </div>
       </div>
 
@@ -71,9 +76,11 @@
           <h5 class="project-title">Quickpoll</h5>
           <img src="https://github.com/J-Guidry/quickpoll/raw/master/quickpoll_main.png" alt="quickpoll screenshot">
           <div class="project-info">
+            <p>A polling app inspired by strawpoll </p>
             <p>Uses: HTML, CSS, JS, PHP Laravel, PostgreSQL</p>
             <p><a href="https://github.com/J-Guidry/quickpoll" target="_blank">Github</a></p>
-            <p><a href="https://quickpoll-39797.herokuapp.com/">Live</a></p>
+            <p><a href="https://quickpoll-39797.herokuapp.com/" target="_blank">Live</a></p>
+            <p><a href="./writeups/quickpoll.html" target="_blank">Writeup</a></p>
           </div>
       </div>
 
@@ -82,9 +89,10 @@
         <h5 class="project-title">Recipe Box</h5>
         <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/recipe-box.png" alt="recipe box screenshot">
         <div class="project-info">
-          <p>Uses: HTML, CSS, ReactJS</p>
+          <p>A place to store your recipes</p>
+          <p>Uses: HTML, CSS, JS, React.js</p>
           <p><a href="https://github.com/J-Guidry/simple-recipe-box/" target="_blank">Github</a></p>
-          <p><a href="https://simple-recipe-box.netlify.com/">Live</a></p>
+          <p><a href="https://simple-recipe-box.netlify.com/" target="_blank">Live</a></p>
         </div>
       </div>
 
@@ -93,42 +101,45 @@
         <h5 class="project-title">Simon Game</h5>
         <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/simon.png" alt="simon game screenshot">
         <div class="project-info">
-          <p>Uses: HTML, CSS, Reactjs</p>
+          <p>Match the colors in sequence</p>
+          <p>Uses: HTML, CSS, JS, React.js</p>
           <p><a href="https://github.com/J-Guidry/simon-game/" target="_blank">Github</a></p>
           <p><a href="https://simon-game-6fd.netlify.com/" target="_blank">Live</a></p>
         </div>
       </div>
 
       <div class="project-tile">
-        <a href="https://codepen.io/Adinseed/full/YrpLdM/" target="_blank">
-          <h5 class="project-title">Wikipedia Viewer</h5>
-          <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/viewer.png" alt="Wikipedia Viewer screenshot">
-        </a>
+        <h5 class="project-title">Wikipedia Viewer</h5>
+        <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/viewer.png" alt="Wikipedia Viewer screenshot">
         <div class="project-info">
-          <p>Uses: HTML, CSS, JS</p>
-          <p><a href="https://codepen.io/Adinseed/full/YrpLdM/" target="_blank">Live</a></p>
+          <p>Uses API to get Wikipedia articles</p>
+          <p>Uses: HTML, CSS, JS, Bootstrap</p>
+          <p><a href="./live/viewer/viewer.html" target="_blank">Live</a></p>
         </div>
       </div>
     </section>
 
 
-    <header id="contact-header"><p>You can find me here:</p></header>
+    <header id="contact-header"><p>You can find me here</p></header>
     <section id="contact-places">
       <div id="github">
         <a class="fa fa-github" 
            href="https://github.com/J-Guidry"
            id="profile-link"
-           target="_blank"         
+           target="_blank" 
+           aria-hidden="true"        
            >Github
         </a>
       </div>
-      <div id="fcc">
-        <a class="fa fa-free-code-camp" 
-           href="https://www.freecodecamp.org/adinseed"
-           target="_blank"
-           >Free Code Camp
-        </a>
-      </div>
+
+      <div id="linkedin">
+          <a class="fa fa-linkedin"  
+             href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
+             target="_blank"
+             aria-hidden="true"
+             >LinkedIn
+          </a>
+        </div>
     </section>
 
     <section id="contact-me">
@@ -137,6 +148,9 @@
         <p>
           <label for="name">Name:</label> <input type="text" name="name" id="name" required placeholder="name">
         </p>
+        <p class="hidden">
+            <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
+          </p>
         <p>
           <label for="email">Email:</label><input type="email" name="email" id="email" required placeholder="email">
         </p>
