--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="welcome-section">
       <h1>Hello</h1>
       <p>I am Jhabari Guidry, a Web Developer</p>
-      <p>I like to build web apps</p>
+      <p>I like to build web apps. </p>
     </section>
     
     <header class="projects-header">
@@ -120,27 +120,8 @@
     </section>
 
 
-    <header id="contact-header"><p>You can find me here</p></header>
-    <section id="contact-places">
-      <div id="github">
-        <a class="fa fa-github" 
-           href="https://github.com/J-Guidry"
-           id="profile-link"
-           target="_blank" 
-           aria-hidden="true"        
-           >Github
-        </a>
-      </div>
+    <header id="contact-header"><p>Feel free to contact me</p></header>
 
-      <div id="linkedin">
-          <a class="fa fa-linkedin"  
-             href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
-             target="_blank"
-             aria-hidden="true"
-             >LinkedIn
-          </a>
-        </div>
-    </section>
 
     <section id="contact-me">
       <h3>Leave a Message</h3>
@@ -160,13 +141,34 @@
         <p>
           <label for="message">Your Message:</label>
         </p>
-        <textarea name="message" id="message" cols="30" rows="10" required></textarea>
+        <textarea name="message" id="message" cols="25" rows="10" required></textarea>
         <button type="submit" id="submit">Send</button>
       </form>
     </section>
   </main>
    
-
+  <footer>
+      <section id="contact-places">
+          <div id="github">
+            <a class="fa fa-github" 
+               href="https://github.com/J-Guidry"
+               id="profile-link"
+               target="_blank" 
+               aria-hidden="true"        
+               >Github
+            </a>
+          </div>
+    
+          <div id="linkedin">
+              <a class="fa fa-linkedin"  
+                 href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
+                 target="_blank"
+                 aria-hidden="true"
+                 >LinkedIn
+              </a>
+            </div>
+        </section>
+  </footer>
 </body>
 
 </html>
