--- a/writeups/calculator.html
+++ b/writeups/calculator.html
@@ -47,6 +47,28 @@
 
    </section>
 </main>
+<footer>
+        <section id="contact-places">
+            <div id="github">
+              <a class="fa fa-github" 
+                 href="https://github.com/J-Guidry"
+                 id="profile-link"
+                 target="_blank" 
+                 aria-hidden="true"        
+                 >Github
+              </a>
+            </div>
+      
+            <div id="linkedin">
+                <a class="fa fa-linkedin"  
+                   href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
+                   target="_blank"
+                   aria-hidden="true"
+                   >LinkedIn
+                </a>
+              </div>
+          </section>
+    </footer>
 </body>
 
 </html>
