--- a/live/calculator/index.html
+++ b/live/calculator/index.html
@@ -5,66 +5,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calculator</title>
+    <link rel="stylesheet" href="../../font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../styles/base.css">
+    <link rel="stylesheet" href="../../styles/navbar.css">
+    <link rel="stylesheet" href="../../styles/footer.css">
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <section class="container">
-        <div class="display">
-            <span>
-                <h2 class="aboutToOperate"></h2>
-            </span><h1></h1>
-        </div>
-    <div class="calculator">
-        <div class="one">
-            <button class="number">1</button>
-        </div>
-        <div class="two">
-            <button class="number">2</button>
-        </div>
-        <div class="three">
-            <button class="number">3</button>
-        </div>
-        <div class="add">
-            <button class="operator">+</button>
-        </div>
-        <div class="four">
-            <button class="number">4</button>
-        </div>
-        <div class="five">
-            <button class="number">5</button>
-        </div>
-        <div class="six">
-            <button class="number">6</button>
-        </div>
-        <div class="subtract">
-            <button class="operator">-</button>
-        </div>
-        <div class="seven">
-            <button class="number">7</button>
-        </div>
-        <div class="eight">
-            <button class="number">8</button>
-        </div>
-        <div class="nine">
-            <button class="number">9</button>
-        </div>
-        <div class="multiply">
-            <button class="operator">×</button>
-        </div>
-        <div class="zero">
-            <button class="number">0</button>
-        </div>
-        <div class="divide">
-            <button class="operator">÷</button>
-        </div>
-        <div class="equals">
-            <button class="result">=</button>
-        </div>
-        <div class="clear">
-            <button class="erase">C</button>
+    <header id="navbar">
+        <nav>
+            <ul>
+            <li><a href="../../index.html#welcome-section">About</a></li>
+            <li><a href="../../index.html#projects">Projects</a></li>
+            <li><a href="../../index.html#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="container">
+            <div class="display">
+                <span>
+                    <h2 class="aboutToOperate"></h2>
+                </span><h1></h1>
+            </div>
+        <div class="calculator">
+            <div class="one">
+                <button class="number">1</button>
+            </div>
+            <div class="two">
+                <button class="number">2</button>
+            </div>
+            <div class="three">
+                <button class="number">3</button>
+            </div>
+            <div class="add">
+                <button class="operator">+</button>
+            </div>
+            <div class="four">
+                <button class="number">4</button>
+            </div>
+            <div class="five">
+                <button class="number">5</button>
+            </div>
+            <div class="six">
+                <button class="number">6</button>
+            </div>
+            <div class="subtract">
+                <button class="operator">-</button>
+            </div>
+            <div class="seven">
+                <button class="number">7</button>
+            </div>
+            <div class="eight">
+                <button class="number">8</button>
+            </div>
+            <div class="nine">
+                <button class="number">9</button>
+            </div>
+            <div class="multiply">
+                <button class="operator">×</button>
+            </div>
+            <div class="zero">
+                <button class="number">0</button>
+            </div>
+            <div class="divide">
+                <button class="operator">÷</button>
+            </div>
+            <div class="equals">
+                <button class="result">=</button>
+            </div>
+            <div class="clear">
+                <button class="erase">C</button>
+            </div>       
         </div>       
-    </div>       
-    </section>
+        </section>
+    </main>
+    <footer>
+        <section id="contact-places">
+            <div id="github">
+                <a class="fa fa-github" 
+                    href="https://github.com/J-Guidry"
+                    id="profile-link"
+                    target="_blank" 
+                    aria-hidden="true"        
+                    >Github
+                </a>
+            </div>
+        
+            <div id="linkedin">
+                <a class="fa fa-linkedin"  
+                    href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
+                    target="_blank"
+                    aria-hidden="true"
+                    >LinkedIn
+                </a>
+                </div>
+            </section>
+    </footer>
     <script src="./index.js"></script>
 </body>
 </html>
