--- a/live/viewer/viewer.html
+++ b/live/viewer/viewer.html
@@ -6,9 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../styles/base.css">
+    <link rel="stylesheet" href="../../styles/navbar.css">
     <link rel="stylesheet" href="./viewer.css">
 </head>
 <body>
+    <header id="navbar">
+        <nav>
+            <ul>
+            <li><a href="../../index.html#welcome-section">About</a></li>
+            <li><a href="../../index.html##projects">Projects</a></li>
+            <li><a href="../../index.html##contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="container">
         <div class='text-center'>
           <h1>Wikipedia Viewer</h1>  
