more footers added to live sites and skills added to about section

--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
     <section id="welcome-section">
       <h1>Hello</h1>
       <p>I am Jhabari Guidry, a Web Developer</p>
-      <p>I like to build web apps. </p>
+      <p>I like to build web apps. 
+        My skills include</p>
+      <section id="skills">
+          <span>Html</span><span>CSS</span><span>JavaScript</span>
+          <span>Bootstrap</span><span>React</span><span>PHP</span>
+          <span>Git</span><span>Webpack</span><span>JSON</span>
+      </section>
+
     </section>
-    
     <header class="projects-header">
       <h1>Here Are My Projects</h1>
       <h2>Web Apps</h2>
