--- a/live/viewer/viewer.html
+++ b/live/viewer/viewer.html
@@ -5,21 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../styles/base.css">
     <link rel="stylesheet" href="../../styles/navbar.css">
     <link rel="stylesheet" href="./viewer.css">
+    <link rel="stylesheet" href="../../styles/footer.css">
 </head>
 <body>
     <header id="navbar">
         <nav>
             <ul>
             <li><a href="../../index.html#welcome-section">About</a></li>
-            <li><a href="../../index.html##projects">Projects</a></li>
-            <li><a href="../../index.html##contact">Contact</a></li>
+            <li><a href="../../index.html#projects">Projects</a></li>
+            <li><a href="../../index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
+    <main>
     <div class="container">
         <div class='text-center'>
           <h1>Wikipedia Viewer</h1>  
@@ -34,7 +37,29 @@
           <div id="output"></div>
         </div>
       </div>
-         
+    </main>
+      <footer>
+        <section id="contact-places">
+            <div id="github">
+              <a class="fa fa-github" 
+                 href="https://github.com/J-Guidry"
+                 id="profile-link"
+                 target="_blank" 
+                 aria-hidden="true"        
+                 >Github
+              </a>
+            </div>
+      
+            <div id="linkedin">
+                <a class="fa fa-linkedin"  
+                   href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
+                   target="_blank"
+                   aria-hidden="true"
+                   >LinkedIn
+                </a>
+              </div>
+          </section>
+    </footer>
     <script src="./viewer.js"></script>
 </body>
 </html>
