--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!--font awesome -->
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Portfolio</title>
 </head>
@@ -23,12 +22,12 @@
 
     <section id="welcome-section">
       <h1>Hello</h1>
-      <p>I am Jhabari Guidry, a Web Developer</p>
+      <p>I am Jhabari Guidry, Front-End Web Developer</p>
       <p>I like to build web apps. 
         My skills include</p>
       <section id="skills">
           <span>Html</span><span>CSS</span><span>JavaScript</span>
-          <span>Bootstrap</span><span>React</span><span>PHP</span>
+          <span>Bootstrap</span><span>React</span>
           <span>Git</span><span>Webpack</span><span>JSON</span>
       </section>
 
