--- a/src/live/todolist/todo.html
+++ b/src/live/todolist/todo.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Todo</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
   <link rel="stylesheet" href="../../styles/base.css">
   <link rel="stylesheet" href="../../styles/navbar.css">
   <link rel="stylesheet" href="../../styles/footer.css">
@@ -23,7 +24,7 @@
 <main>
   <div class="container">      
     <div class="box">
-      <h2>Todo List</h2>
+      <h1>Todo List</h1>
       <div>
         <button onclick="controller.toggleAll()">Toggle All Todo Items</button>
       </div>
