--- a/src/live/todolist/todo.html
+++ b/src/live/todolist/todo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Todo</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../../../node_modules/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
   <link rel="stylesheet" href="../../styles/base.css">
   <link rel="stylesheet" href="../../styles/navbar.css">
@@ -61,6 +61,7 @@
             </div>
           </section>
         </footer>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
+    <!-- <script src="../../index.js"></script> -->
 </body>
 </html>
