--- a/src/contact.html
+++ b/src/contact.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <title>Portfolio</title>
@@ -14,7 +13,7 @@
         <nav>
             <ul>
             <li><a href="./index.html">About</a></li>
-            <!-- <li><a href="./projects.html">Projects</a></li> -->
+            <li><a href="./projects.html">Projects</a></li>
             <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -66,5 +65,6 @@
                 </div>
             </section>
     </footer>
+    <script src="./index.js"></script>
 </body>
 </html>
