--- a/src/live/calculator/index.html
+++ b/src/live/calculator/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calculator</title>
-    <link rel="stylesheet" href="../../../node_modules/font-awesome/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="../../../node_modules/font-awesome/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="../../styles/base.css">
     <link rel="stylesheet" href="../../styles/navbar.css">
     <link rel="stylesheet" href="../../styles/footer.css">
