--- a/src/projects.html
+++ b/src/projects.html
@@ -86,6 +86,7 @@
             <p>Uses: HTML, CSS, JS, React.js</p>
             <p><a href="https://github.com/J-Guidry/simple-recipe-box/" target="_blank">Github</a></p>
             <p><a href="https://simple-recipe-box.netlify.com/" target="_blank">Live</a></p>
+            <p><a href="./writeups/recipe.html" target="_blank">Writeup</a></p>
         </div>
         </div>
 
@@ -98,6 +99,7 @@
             <p>Uses: HTML, CSS, JS, React.js</p>
             <p><a href="https://github.com/J-Guidry/simon-game/" target="_blank">Github</a></p>
             <p><a href="https://simon-game-6fd.netlify.com/" target="_blank">Live</a></p>
+            <p><a href="./writeups/simon.html" target="_blank">Writeup</a></p>
         </div>
         </div>
 
@@ -108,6 +110,7 @@
             <p>Uses API to get Wikipedia articles</p>
             <p>Uses: HTML, CSS, JS, Bootstrap</p>
             <p><a href="./live/viewer/viewer.html" target="_blank">Live</a></p>
+            <p><a href="./writeups/viewer.html" target="_blank">Writeup</a></p>
         </div>
         </div>
     </section>
