--- a/src/writeups/todolist.html
+++ b/src/writeups/todolist.html
@@ -12,9 +12,9 @@
   <header id="navbar">
       <nav>
         <ul>
-          <li><a href="../index.html#welcome-section">About</a></li>
-          <li><a href="../index.html##projects">Projects</a></li>
-          <li><a href="../index.html##contact">Contact</a></li>
+          <li><a href="../index.html">About</a></li>
+          <li><a href="../projects.html">Projects</a></li>
+          <li><a href="../contact.html">Contact</a></li>
         </ul>
       </nav>
   </header>
