more meta tags added

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <meta name="description" content="This is Jhabari Guidry's web developer portfolio">
+    <meta name="keywords" content="jhabari guidry, portfolio, web developer,
+     html, css, javascript, react">
+     <meta name="author" content="Jhabari Guidry">
     <title>Portfolio</title>
 </head>
 <body>
