footers fixed, calculator and todolist restyled

--- a/src/live/calculator/index.html
+++ b/src/live/calculator/index.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main-calculator">
         <section class="container">
             <div class="display">
                 <span>
