--- a/src/live/todolist/todo.html
+++ b/src/live/todolist/todo.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-<main>
+<main class="main-todo-list">
   <div class="container">      
     <div class="box">
       <h1>Todo List</h1>
