--- a/src/projects.html
+++ b/src/projects.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main-projects">
         <header class="projects-header">
             <h1>Here Are My Projects</h1>
             <h2>Web Apps</h2>
