--- a/src/contact.html
+++ b/src/contact.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main-contact">
     <header id="contact-header"><p>Feel free to contact me</p></header>
         <section id="contact-me">
         <h3>Leave a Message</h3>
