--- a/src/live/viewer/viewer.html
+++ b/src/live/viewer/viewer.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main-viewer">
     <div class="container">
       <div class='text-center'>
         <h1>Wikipedia Viewer</h1>  
