css components changed to scss, todolist and calculator styles adjusted

--- a/src/live/todolist/todo.html
+++ b/src/live/todolist/todo.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Todo</title>
-  <link rel="stylesheet" href="../../styles/base.css">
-  <link rel="stylesheet" href="../../styles/navbar.css">
-  <link rel="stylesheet" href="../../styles/footer.css">
+  <link rel="stylesheet" href="../../styles/styles.scss">
   <link rel="stylesheet" href="./todo.css">
+  <link rel="stylesheet" href="../../styles/footer.css">
 </head>
 <body>
     <header id="navbar">
@@ -21,7 +20,7 @@
         </nav>
     </header>
 <main class="main-todo-list">
-  <div class="container">      
+    
     <div class="box">
       <h1>Todo List</h1>
       <div>
@@ -36,7 +35,7 @@
       <ul id="todolist">
       </ul>
     </div>
-  </div>
+
 </main>
   <footer>
       <section id="contact-places">
