--- a/src/live/viewer/viewer.html
+++ b/src/live/viewer/viewer.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="../../styles/base.css">
-    <link rel="stylesheet" href="../../styles/navbar.css">
+    <link rel="stylesheet" href="../../styles/_base.scss">
+    <link rel="stylesheet" href="../../styles/_navbar.scss">
     <link rel="stylesheet" href="./viewer.css">
     <link rel="stylesheet" href="../../styles/footer.css">
 </head>
