--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" type="text/css" href="./styles/styles.scss">
+    <link rel="stylesheet" type="text/css" href="./styles/footer.css">
     <meta name="description" content="This is Jhabari Guidry's web developer portfolio">
     <meta name="keywords" content="jhabari guidry, portfolio, web developer,
      html, css, javascript, react">
