--- a/src/live/calculator/index.html
+++ b/src/live/calculator/index.html
@@ -6,10 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calculator</title>
     <!-- <link rel="stylesheet" href="../../../node_modules/font-awesome/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="../../styles/base.css">
-    <link rel="stylesheet" href="../../styles/navbar.css">
-    <link rel="stylesheet" href="../../styles/footer.css">
+    <link rel="stylesheet" href="../../styles/styles.scss">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="../../styles/footer.css">
 </head>
 <body>
     <header id="navbar">
