--- a/src/projects.html
+++ b/src/projects.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="stylesheet" href="./styles/projects.css">
-    <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" type="text/css" href="./styles/styles.scss">
+    <link rel="stylesheet" type="text/css" href="./styles/projects.css">
+    <link rel="stylesheet" type="text/css" href="./styles/footer.css">
     <title>Portfolio</title>
 </head>
 <body>
