image srcs replaced

--- a/src/projects.html
+++ b/src/projects.html
@@ -28,7 +28,7 @@
     <section class="projects" id="projects">
         <div id="calculator" class="project-tile">
         <h5 class="project-title">Calculator</h5>
-        <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/calculator.png" alt="calculator screenshot">
+        <img src="./images/calculator.png" alt="calculator screenshot">
         <div class="project-info">
             <p>A four function calculator</p>
             <p>Uses: HTML, CSS, JS</p>
@@ -41,7 +41,7 @@
         
         <div id="todolist" class="project-tile">
         <h5 class="project-title">Todolist</h5>
-        <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/todolist.png" alt="todolist screenshot">
+        <img src="./images/todolist.png" alt="">
         <div class="project-info">
             <p>A simple todo list</p>
             <p>Uses: HTML, CSS, JS</p>
@@ -54,7 +54,7 @@
 
         <div class="project-tile">
         <h5 class="project-title">Simple Productiviy App</h5>
-        <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/productivity.png" alt="productibity app screenshot">
+        <img src="./images/productivity.png" alt="productivity app screenshot">
         <div class="project-info">
             <p>A productivity app to organize your tasks</p>
             <p>Uses: HTML, CSS, JS, Jquery, Bootstrap</p>
@@ -67,7 +67,7 @@
 
         <div class="project-tile">
             <h5 class="project-title">Quickpoll</h5>
-            <img src="https://github.com/J-Guidry/quickpoll/raw/master/quickpoll_main.png" alt="quickpoll screenshot">
+            <img src="./images/quickpoll_main.png" alt="quickpoll screenshot">
             <div class="project-info">
             <p>A polling app inspired by strawpoll </p>
             <p>Uses: HTML, CSS, JS, PHP Laravel, PostgreSQL</p>
@@ -80,7 +80,7 @@
 
         <div class="project-tile">
         <h5 class="project-title">Recipe Box</h5>
-        <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/recipe-box.png" alt="recipe box screenshot">
+        <img src="./images/recipe-box.png" alt="recipe box screenshot">
         <div class="project-info">
             <p>A place to store your recipes</p>
             <p>Uses: HTML, CSS, JS, React.js</p>
@@ -93,7 +93,7 @@
         
         <div class="project-tile">
         <h5 class="project-title">Simon Game</h5>
-        <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/simon.png" alt="simon game screenshot">
+        <img src="./images/simon.png" alt="simon game screenshot">
         <div class="project-info">
             <p>Match the colors in sequence</p>
             <p>Uses: HTML, CSS, JS, React.js</p>
@@ -105,7 +105,7 @@
 
         <div class="project-tile">
         <h5 class="project-title">Wikipedia Viewer</h5>
-        <img src="https://github.com/J-Guidry/images_repo/raw/master/web_images/viewer.png" alt="Wikipedia Viewer screenshot">
+        <img src="./images/viewer.png" alt="Wikipedia Viewer screenshot">
         <div class="project-info">
             <p>Uses API to get Wikipedia articles</p>
             <p>Uses: HTML, CSS, JS, Bootstrap</p>
